# docling-serve

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Makefile  README.md  pyproject.toml
.github/workflow/: images.yml
.github/workflows/: actionlint.yml  checks.yml  images.yml
docling_serve/: app.py  settings.py
